<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/hotelImageView"
        android:layout_width="143dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="14dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_hotel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hotelNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="150dp"
        android:maxHeight="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/some_hotel"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/hotelImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/regionNameTextView"
        />

    <TextView
        android:id="@+id/reviewScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="5.0 / 10"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/hotelImageView"
        app:layout_constraintTop_toBottomOf="@+id/regionNameTextView" />

    <TextView
        android:id="@+id/totalReviewsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="(total 19)"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/reviewScoreTextView"
        app:layout_constraintTop_toBottomOf="@+id/regionNameTextView" />


    <TextView
        android:id="@+id/regionNameTextView"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="Nada"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/hotelImageView"
        app:layout_constraintTop_toTopOf="@+id/hotelNameTextView" />

    <TextView
        android:id="@+id/priceInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="15dp"
        android:text="50"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regionNameTextView" />

    <Button
        android:id="@+id/cancelReservationButton"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginStart="192dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/priceInfo"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="52dp"
        android:text="@string/price_for_x_days"
        app:layout_constraintStart_toEndOf="@id/hotelImageView"
        android:layout_marginStart="26dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
